tests/paczka1/small_fuzzy/79861645.err
Error in line 1: Awgm A478 55,6
Error in line 8: Zvj S218 38,6
